--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <meta name="description" content="Hangul Watch Application" />
-  <title>Hangul Watch</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="description" content="Hangul Watch Application" />
+    <title>Hangul Watch</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  </head>
 
-<body>
-  <div id='watchface'>
-    <div id='time'>
-      <div id='ampm-str' class=minor>오후</div>
-      <br />
-      <div id='h-str' class='major'>열두</div>
-      <div id='h-suffix' class='minor'>시</div>
-      <br />
-      <div id='m-str' class='major'>삼십사</div>
-      <div id='m-suffix' class='minor'>분</div>
+  <body>
+    <div id='watchface'>
+      <div id='time-full' class='major'>
+        자정
+      </div>
+
+      <div id='time'>
+        <div id='ampm-str' class=minor>오후</div>
+        <br />
+        <div id='h-str' class='major'>열두</div>
+        <div id='h-suffix' class='minor'>시</div>
+        <br />
+        <div id='m-str' class='major'>삼십사</div>
+        <div id='m-suffix' class='minor'>분</div>
+      </div>
+
+      <div id='date-str' class='minor'>
+        십일월 이십사일 일요일
+      </div>
     </div>
 
-    <div id='date-str' class='minor'>
-      십이월 이십사일
-    </div>
-  </div>
-  <script src="js/app.js"></script>
-</body>
+    <script src="js/app.js"></script>
+  </body>
 
 </html>
