use span to align single lines

--- a/index.html
+++ b/index.html
@@ -15,20 +15,24 @@
         자정
       </div>
 
+      <div id='ampm-str' class=minor>오후</div>
       <div id='time'>
-        <div id='ampm-str' class=minor>오후</div>
-        <br />
-        <div id='h-str' class='major'>열두</div>
-        <div id='h-suffix' class='minor'>시</div>
-        <br />
-        <div id='m-str' class='major'>삼십사</div>
-        <div id='m-suffix' class='minor'>분</div>
+        <div id=time-h>
+          <span id='h-str' class='major'>열두</span>
+          <span id='h-suffix' class='minor'>시</span>
+        </div>
+        <div id=time-m>
+          <span id='m-str' class='major'>삼십사</span>
+          <span id='m-suffix' class='minor'>분</span>
+        </div>
       </div>
 
       <div id='date-str' class='minor'>
         십일월 이십사일 일요일
       </div>
     </div>
+
+    <!-- <svg> <circle cx='180px' cy='180px' r='250px' stroke='green' fill='green'/> </svg> -->
 
     <script src="js/app.js"></script>
   </body>
