--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <div id='date-str' class='minor'>
         십일월 이십사일 일요일
       </div>
+      
+      <canvas id="canvas"></canvas>
     </div>
 
     <!-- <svg> <circle cx='180px' cy='180px' r='250px' stroke='green' fill='green'/> </svg> -->
